--- a/photoshare/photoshare/SearchPhotoViewController.xib
+++ b/photoshare/photoshare/SearchPhotoViewController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchPhotoViewController">
             <connections>
                 <outlet property="collectionViewForPhoto" destination="UJ7-45-uOz" id="bRV-6j-4N8"/>
+                <outlet property="imgView1" destination="SU5-bk-2HQ" id="fGq-56-dye"/>
                 <outlet property="searchBarForPhoto" destination="BTd-pd-yf1" id="Bib-v1-Ha1"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
@@ -26,7 +27,7 @@
                 </searchBar>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="UJ7-45-uOz">
                     <rect key="frame" x="0.0" y="146" width="320" height="277"/>
-                    <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="10" id="5YJ-To-Z3C">
                         <size key="itemSize" width="92" height="100"/>
@@ -40,6 +41,10 @@
                         <outlet property="delegate" destination="-1" id="s0d-Au-cGo"/>
                     </connections>
                 </collectionView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="SU5-bk-2HQ">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="435"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
