--- a/photoshare/photoshare/ShareWithUserViewController_iPad.xib
+++ b/photoshare/photoshare/ShareWithUserViewController_iPad.xib
@@ -8,7 +8,7 @@
             <connections>
                 <outlet property="saveBtn" destination="1Fo-5z-PTk" id="o10-sl-0ik"/>
                 <outlet property="scrollView" destination="Wcb-zf-sXv" id="9ti-gL-wZg"/>
-                <outlet property="searchUserTF" destination="iEU-oy-BYr" id="EU0-WE-hDx"/>
+                <outlet property="searchBarForUserSearch" destination="6B3-cO-XcF" id="dZm-sN-Mky"/>
                 <outlet property="shareSearchView" destination="fG8-2m-1DA" id="gv5-cx-rab"/>
                 <outlet property="sharingUserListCollView" destination="pUT-n9-UQo" id="emG-Yw-LpC"/>
                 <outlet property="userAddButton" destination="aXc-hn-ein" id="zAa-y5-nz3"/>
@@ -28,14 +28,8 @@
                             <rect key="frame" x="189" y="20" width="390" height="70"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <textField opaque="NO" clipsSubviews="YES" tag="1101" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="search" minimumFontSize="17" id="iEU-oy-BYr">
-                                    <rect key="frame" x="10" y="8" width="322" height="49"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" id="aXc-hn-ein">
-                                    <rect key="frame" x="348.00228061882484" y="24" width="22" height="22"/>
+                                    <rect key="frame" x="348" y="24" width="22" height="22"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <state key="normal">
@@ -45,6 +39,15 @@
                                         <action selector="addUserInSharing:" destination="-1" eventType="touchUpInside" id="coQ-3h-JYx"/>
                                     </connections>
                                 </button>
+                                <searchBar contentMode="redraw" text="" placeholder="Search" id="6B3-cO-XcF">
+                                    <rect key="frame" x="2" y="13" width="341" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="U84-KI-w2j"/>
+                                    </connections>
+                                </searchBar>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
